🚀 fixed screen size on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -532,8 +532,8 @@ body {
     .participant-carousel {
         max-height: 300px; 
     }
-    .focused-participant-container {
-        max-height: 20vh;
+    .enhanced-focus-layout {
+        max-width: 100px;
     }
 }
 .participant-carousel::-webkit-scrollbar {
